--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-preset-stage-2": "^6.24.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "firebase": "^7.2.2",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.16.0",
+    "poppers": "^0.1.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3",
+    "vue-select": "^3.2.0",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
